@@ -1,7 +1,7 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class HasMessagesTest < Test::Unit::TestCase
-  fixtures :users, :messages, :message_recipients
+  fixtures :users, :messages, :message_recipients, :state_changes
   
   def test_should_generate_received_association
     assert_equal [messages(:sent_from_bob), messages(:sent_from_mary)], users(:john).received_messages.map(&:message)
