@@ -1,7 +1,7 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class RecipientExtensionTest < Test::Unit::TestCase
-  fixtures :users, :messages, :message_recipients
+  fixtures :users, :messages, :message_recipients, :state_changes
   
   def setup
     @message = messages(:unsent_from_bob)
